# logger_library

./: CMakeLists.txt  Dockerfile  README.md  clear.sh  docker-compose.yml  logger-test.yml  main.cpp  run_exec.sh  run_test.sh
.github/workflows/: logger-test.yml
docs/: doc.md
docs/diagrams/: interface.plantuml  main_class_diagram.puml  system_sequence_diagram.puml  system_sequence_diagram1.puml  system_sequence_diagram_old.puml
examples/inc/: warehouse.hpp
examples/src/: warehouse.cpp
inc/: FileLogger.hpp  LogDestination.hpp  LogDestinationManager.hpp  LogFormatter.hpp  LogLevel.hpp  Logger.hpp  LoggerInterface.hpp  NetworkLogger.hpp  RESTAPIClient.hpp
log_server/: Dockerfile  log_server.py
src/: FileLogger.cpp  LogDestinationManager.cpp  LogFormatter.cpp  LogLevel.cpp  Logger.cpp  LoggerInterface.cpp  NetworkLogger.cpp  RESTAPIClient.cpp
test/: FileLogger_test.cpp  LogDestinationManager_test.cpp  LogFormatter_test.cpp  LogLevel_test.cpp  LoggerInterface_test.cpp  Logger_test.cpp
test/mocks/: LoggerInterface_mock.cpp  MockLogDestination.hpp
